Fix en los z-index

--- a/css/_1general.scss
+++ b/css/_1general.scss
@@ -64,7 +64,7 @@ figure{
     line-height: 40px;
     text-align: center;
     position: fixed;
-    z-index: 5;
+    z-index: 15;
     left: 5px;
     top: 5px;
 }
