--- a/css/_3MQ767px.scss
+++ b/css/_3MQ767px.scss
@@ -28,7 +28,7 @@
     .menu{
         position: fixed;
         background-color: rgba(#026fff, .8);
-        z-index: 3;
+        z-index: 10;
         top: 0;
         left: -100vw;
         width: 100vw;
