--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ figure {
   line-height: 40px;
   text-align: center;
   position: fixed;
-  z-index: 5;
+  z-index: 15;
   left: 5px;
   top: 5px; }
 
@@ -347,7 +347,7 @@ figure {
   .menu {
     position: fixed;
     background-color: rgba(2, 111, 255, 0.8);
-    z-index: 3;
+    z-index: 10;
     top: 0;
     left: -100vw;
     width: 100vw;
